# refimage

./: .gitignore  CHANGELOG.MD  Cargo.toml  README.MD
benches/: cast_u8.rs  luma_par.rs
examples/: fitsio.rs  test_debayer.rs  test_flow.rs
src/: coreimpls.rs  coretraits.rs  datastor.rs  dynamicimage_interop.rs  dynamicimage_serde.rs  dynamicimagedata.rs  dynamicimagedata_serde.rs  dynamicimageowned.rs  dynamicimageref.rs  fitsio_interop.rs  genericimage.rs  genericimageowned.rs  genericimageref.rs  imagedata.rs  imageowned.rs  imageref.rs  imagetraits.rs  lib.rs  metadata.rs  optimumexposure.rs  traits.rs
src/demosaic/: bayer.rs  border_mirror.rs  border_none.rs  border_replicate.rs  cubic.rs  errcode.rs  linear.rs  mod.rs  nearestneighbour.rs  none.rs  raster.rs  rotate.rs
