[package]
name = "refimage"
version = "0.1.0"
edition = "2021"
resolver = "2"

license = "MIT OR Apache-2.0"
description = "Imaging library. Provides basic image processing and encoders/decoders for common image formats."
authors = ["Sunip K. Mukherjee <sunipkmukherjee@gmail.com>"]
readme = "README.md"

include = [
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.MD",
    "/src/",
]

[dependencies]
# required
bytemuck = { version = "1.16", features = [
    "aarch64_simd",
    "wasm_simd",
    "extern_crate_alloc",
] }
num-traits = "0.2"
quick-error = "2.0"
crc32fast = { version = "1.4" }
serde = { version = "1.0", features = ["derive"] }

# optional
flate2 = { version = "1.0", optional = true }
fitsio = { version = "0.21", optional = true }
image = { version = "0.25", optional = true }
rayon = { version = "1.10", optional = true }
chrono = "0.4.38"
# rkyv = { version = "0.7", optional = true }

[dev-dependencies]
bincode = "1.3"
serde_json = "1.0"
color-backtrace = "0.6"
serde-generate = "0.26"
serde-reflection = "0.4"

[features]
default = ["rayon", "serde_flate"]
# rkyv = ["serialize", "dep:rkyv"]
serde_flate = ["dep:flate2"]

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]