[package]
name = "refimage"
version = "0.8.1"
edition = "2021"
resolver = "2"

license = "MIT OR Apache-2.0"
description = "Imaging library. Provides basic image processing and encoders/decoders for common image formats."
authors = ["Sunip K. Mukherjee <sunipkmukherjee@gmail.com>"]
readme = "README.MD"

# crates.io metadata
documentation = "https://docs.rs/refimage"
repository = "https://github.com/sunipkm/refimage"
homepage = "https://github.com/sunipkm/refimage"
categories = ["multimedia::images", "multimedia::encoding", "encoding"]

include = [
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.MD",
    "/CHANGELOG.MD",
    "/src/",
    "/examples/",
    "/benches/",
]

[dependencies]
# required
bytemuck = { version = "1.16", features = [
    "aarch64_simd",
    "wasm_simd",
    "extern_crate_alloc",
] }
num-traits = "0.2"
quick-error = "2.0"
crc32fast = { version = "1.4" }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

# optional
flate2 = { version = "1.0", optional = true }
fitsio = { version = "0.21", optional = true }
image = { version = "0.25", optional = true }
rayon = { version = "1.10", optional = true }
itertools = "0.13.0"
# rkyv = { version = "0.7", optional = true }

[dev-dependencies]
bincode = "1.3"
color-backtrace = "0.6"
rand = "0.8"
serde-generate = "0.26"
serde_json = "1.0"
serde-reflection = "0.4"

[features]
default = ["rayon", "serde_flate"]
# rkyv = ["serialize", "dep:rkyv"]
serde_flate = ["dep:flate2"]
image = ["dep:image"]
fitsio = ["dep:fitsio"]

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
path = "benches/cast_u8.rs"
name = "cast_u8"
